feat: реализовано плагин с созданием 3 колонок в базе